--- a/10.b.ipynb
+++ b/10.b.ipynb
@@ -44,7 +44,7 @@
     "#### Cara Melakukannya..\n",
     "Masih ingat syntax untuk membuat sebuah class?\n",
     "``` Python\n",
-    "class NamaKelas: ## Bisa juga diberi kurung kosong `()` di akhir tapi tidak wajib.\n",
+    "class NamaKelas(): ## Bisa juga diberi kurung kosong `()` di akhir tapi tidak wajib.\n",
     "    ## Kode    \n",
     "```\n",
     "\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,9 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vespa berhasil dibuat!\n"
+     ]
+    }
+   ],
    "source": [
     "vespa = Vespa('pertalite')"
    ]
@@ -217,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
