--- a/10.c.ipynb
+++ b/10.c.ipynb
@@ -64,11 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Orang():\n",
+    "    def __init__(self):\n",
+    "        print(\"Silahkan set nama dengan method setter!\")\n",
     "\n",
     "    ## Contoh Method Setter\n",
     "    def setNama(self, nama):\n",
@@ -81,16 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Silahkan set nama dengan method setter!\n"
+     ]
+    }
+   ],
    "source": [
     "saya = Orang()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +118,7 @@
        "'Firman'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +147,36 @@
        "'Firman'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saya.getNama()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saya.setNama('Budi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Budi'"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,38 +195,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Kubus():\n",
-    "    def __init__(self,rusuk):\n",
+    "    \n",
+    "    ## Method Setter\n",
+    "    def setRusuk(self,rusuk):\n",
     "        self.__rusuk = rusuk\n",
-    "        \n",
+    "    \n",
+    "    ## Method Privat\n",
     "    def __volume(self):\n",
     "        return self.__rusuk**3\n",
     "    \n",
+    "    ## Method Publik\n",
     "    def tampilInfo(self):\n",
     "        print('Rusuk :', self.__rusuk)\n",
-    "        print('Volume:', self.__volume())"
+    "        print('Volume:', self.volume())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rusuk : 3\n",
-      "Volume: 27\n"
+      "Rusuk : 4\n",
+      "Volume: 64\n"
      ]
     }
    ],
    "source": [
-    "cube = Kubus(3)\n",
+    "cube = Kubus()\n",
+    "cube.setRusuk(4)\n",
     "cube.tampilInfo()"
    ]
   },
@@ -200,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +254,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-51-c86423e83c07>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrusuk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-18-c86423e83c07>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrusuk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m: 'Kubus' object has no attribute 'rusuk'"
      ]
     }
@@ -221,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +275,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-52-2d0f5b4e89e3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_rusuk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-19-2d0f5b4e89e3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_rusuk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m: 'Kubus' object has no attribute '_rusuk'"
      ]
     }
@@ -242,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -252,13 +296,176 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-50-ece15fdd599b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__rusuk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-20-ece15fdd599b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__rusuk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m: 'Kubus' object has no attribute '__rusuk'"
      ]
     }
    ],
    "source": [
     "cube.__rusuk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Kubus' object has no attribute 'volume'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-f2f092457d5b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvolume\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Kubus' object has no attribute 'volume'"
+     ]
+    }
+   ],
+   "source": [
+    "cube.volume()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Kubus' object has no attribute '_volume'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-36554123ca20>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_volume\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Kubus' object has no attribute '_volume'"
+     ]
+    }
+   ],
+   "source": [
+    "cube._volume()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Kubus' object has no attribute '__volume'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-ed514ed759e1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcube\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__volume\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Kubus' object has no attribute '__volume'"
+     ]
+    }
+   ],
+   "source": [
+    "cube.__volume()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Penjelasan Enkapsulasi di Python\n",
+    "Enkapsulasi pada Python berbeda dengan enkapsulasi di Java atau C++ dimana adanya keyword `public` dan `private` seperti contoh berikut.\n",
+    "``` Java\n",
+    "// Contoh atribut di Java\n",
+    "public class Barang{\n",
+    "    \n",
+    "    public int jumlah_barang;\n",
+    "    private String id_barang;\n",
+    "\n",
+    "    // Method Setter\n",
+    "    public void set_id(id_barang){\n",
+    "        this.id_barang = id_barang;\n",
+    "    }\n",
+    "\n",
+    "    // Method Getter\n",
+    "    public String get_id(){\n",
+    "        return this.id_barang;\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Sebenarnya Python tidak memiliki cara baku untuk enkapsulasi. Penggunaan satu _underscore_ seperti pada `_privat` hanyalah aturan penulisan yang disepakati programmer supaya nama itu tidak digunakan di class lain dan **tidak berpengaruh pada hak akses** atribut atau method. Sementara penggunaan dua _underscore_ seperti pada `__privat` tidak sepenuhnya membuat atribut atau method tersebut tidak bisa diakses dari luar kelas. **Double _underscore_ hanya mengganti nama atribut atau method tersebut**. Contohnya ada dibawah."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Kelas:\n",
+    "    def __init__(self):\n",
+    "        self.__rahasia = \"Ini adalah atribut rahasia\"\n",
+    "        \n",
+    "objek = Kelas()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Memanggil atribut tersebut dengan cara biasa hanya akan menghasilkan error. Bagaimana dengan kode dibawah?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Kelas' object has no attribute '__rahasia'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-ef3bd65ad6d5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjek\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__rahasia\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Kelas' object has no attribute '__rahasia'"
+     ]
+    }
+   ],
+   "source": [
+    "print(objek.__rahasia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ini adalah atribut rahasia\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(objek._Kelas__rahasia)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Penggunaan Underscore\n",
+    "| Pola                                   | Contoh    | Penjelasan                                                                                                                                                                                                                      |\n",
+    "|----------------------------------------|-----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| Single Leading Underscore              | `_var`    | Konvensi/kesepakatan penamaan yang menandakan nama tersebut hanya digunakan secara internal. Umumnya tidak terpengaruh Intepreter Python (kecuali dalam import wildcard (*) dan hanya berarti sebagai petunjuk bagi programmer. |\n",
+    "| Single Trailing Underscore             | `var_`    | Disepakati untuk digunakan agar menghindari konflik dengan keyword Python.                                                                                                                                                      |\n",
+    "| Double Leading Underscore              | `__var`   | Mengaktifkan pengubahan nama ketika digunakan dalam class. Terpengaruh oleh Intepreter Python.                                                                                                                                  |\n",
+    "| Double Leading and Trailing Underscore | `__var__` | Mengindikasikan method khusus yang dibuat oleh bahasa Python. Hindari penamaan seperti ini untuk atribut buatan sendiri.                                                                                                        |\n",
+    "| Single Underscore                      | `_`       | Terkadang digunakan sebagai nama untuk variabel sementara atau insignifikan.                                                                                                                                                    |"
    ]
   },
   {
@@ -299,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
